--- a/README.adoc
+++ b/README.adoc
@@ -16,8 +16,8 @@ To apply recipes on a standalone Camel Project you can use maven plugin:
 
 mvn -U org.openrewrite.maven:rewrite-maven-plugin:5.20.0:run \
 -Drewrite.recipeArtifactCoordinates=org.apache.camel:camel-upgrade-recipes:1.0.0-SNAPSHOT \
--DactiveRecipes=org.apache.camel.updates.camel44.CamelMigrationRecipe
--Drewrite.recipeFile=/org.apache.camel.updates/4.0.yaml
+-DactiveRecipes=org.apache.camel.upgrade.camel44.CamelMigrationRecipe
+-Drewrite.recipeFile=/org.apache.camel.upgrade/4.0.yaml
 ```
 
 == JUnit testing
