Update README.adoc to show updated groupId & version
As per https://camel.apache.org/blog/2024/10/camel-upgrade-recipes-release-4.8.0/

--- a/README.adoc
+++ b/README.adoc
@@ -14,10 +14,9 @@ To apply recipes on a standalone Camel Project you can use maven plugin:
 
 ```
 
-mvn -U org.openrewrite.maven:rewrite-maven-plugin:5.20.0:run \
--Drewrite.recipeArtifactCoordinates=org.apache.camel:camel-upgrade-recipes:1.0.0-SNAPSHOT \
--DactiveRecipes=org.apache.camel.upgrade.camel44.CamelMigrationRecipe
--Drewrite.recipeFile=/org.apache.camel.upgrade/4.0.yaml
+mvn -U org.openrewrite.maven:rewrite-maven-plugin:5.42.2:run \
+-Drewrite.recipeArtifactCoordinates=org.apache.camel.upgrade:camel-upgrade-recipes:4.8.0 \
+-DactiveRecipes=org.apache.camel.upgrade.camel44.CamelMigrationRecipe,org.apache.camel.upgrade.camel45.CamelMigrationRecipe
 ```
 
 == JUnit testing
